[project]
name = "tts"
version = "0.1.0"
description = "Convert EPUB e-books to M4B audiobooks via Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12",
    "chonkie>=1.5",
    "ebooklib>=0.20",
    "ffmpeg-python>=0.2",
    "numba>=0.61",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "typer>=0.15",
    "torch",
    "flash-attn; platform_system == 'Linux'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "platform_system == 'Linux'" }]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3+cu130torch2.10-cp314-cp314-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
