[project]
name = "tts"
version = "0.1.0"
description = "Convert EPUB e-books to M4B audiobooks via Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12",
    "chonkie>=1.5",
    "ebooklib>=0.20",
    "ffmpeg-python>=0.2",
    "openai>=2.20.0",
    "soundfile>=0.13.1",
    "typer>=0.23",
]
